--- a/wordcount/pom.xml
+++ b/wordcount/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bigdata</groupId>
-    <artifactId>Projet-Tweeter</artifactId>
+    <artifactId>Projet-Tweeter-HashtagCount</artifactId>
     <version>1.0</version>
-    <name>Big Data Project Tweeter</name>
+    <name>Hashtag Count</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -35,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>TweetProject</mainClass>
+                            <mainClass>HashtagCount</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
