--- a/topk/pom.xml
+++ b/topk/pom.xml
@@ -35,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>TopHashtag</mainClass>
+                            <mainClass>HashtagTop</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
